<resources>
    <string name="app_name">Hicare Run</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="invalid_userid">Invalid UserId</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="runtime_permissions_txt">Permissions</string>
    <string name="upload_job_card">Upload Job Card</string>
    <string name="send_feedback_link">Send Feedback Link</string>
    <string name="contact"><u>8828333888</u></string>
    <string name="helpmail"><u>itsupport@hicare.in</u></string>
    <string name="login_sign_up">Login / Sign up</string>
    <string name="status">Status</string>
    <string name="finish_time">Finish Time</string>
    <string name="start_time">Start Time</string>
    <string name="duration">Duration</string>
    <string name="deprected">Deprected</string>
    <string name="fragment_camera2">Camera2</string>
    <string name="customer_name">Customer Name</string>
    <string-array name="payment_mode">
        <item>None</item>
        <item>Cash</item>
        <item>Cheque</item>
        <item>Paytm</item>
    </string-array>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="interested_service">Interested Service</string>
    <string name="cancel">CANCEL</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_phone_number_to_proceed">Enter your phone number to proceed</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="enter_phone_number">ENTER PHONE NUMBER</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="alt_mobile_no">Alt. Mobile No.</string>
    <string name="home">Home</string>
    <string name="grooming">Grooming</string>
    <string name="my_id_card">My ID Card</string>
    <string name="notifications">Notifications</string>
    <string name="training">Training</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="add_on_site_activity">Add On-Site Activity</string>
    <string name="service_osite">Service</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_onsite">Cancel</string>
    <string name="done_onsite">Done</string>
    <string name="home_bottom">Home</string>
    <string name="incentives_home">Incentives</string>
    <string name="attendance_bottom">Attendance</string>
    <string name="id_card_bottom">ID Card</string>
</resources>