<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />

        <item
            android:id="@+id/nav_groom"
            android:title="@string/grooming"
            android:icon="@drawable/ic_groom"
            />

        <item
            android:id="@+id/nav_myid"
            android:title="@string/my_id_card"
            android:icon="@drawable/ic_id_card"
            />

        <item
            android:id="@+id/nav_notifications"
            android:title="@string/notifications"
            android:icon="@drawable/ic_bell"
            android:visible="false"
            />
        <item
            android:id="@+id/nav_training"
            android:title="@string/training"
            android:icon="@drawable/ic_learn"

            />

        <item
            android:id="@+id/nav_help"
            android:title="@string/help"
            android:icon="@drawable/ic_info"

            />


        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"
           />
    </group>
</menu>