<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home_bottom"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:enabled="true"

        />

    <item
        android:id="@+id/nav_incentive"
        android:title="@string/incentives_home"
        android:icon="@drawable/ic_rupee_incentives"
        app:showAsAction="ifRoom"
        android:enabled="true"

        />
    <item
        android:id="@+id/nav_rewards"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="" />

    <item
        android:id="@+id/nav_attendance"
        android:title="@string/attendance_bottom"
        android:icon="@drawable/ic_icon"
        app:showAsAction="ifRoom"
        android:enabled="true"

        />
    <item
        android:id="@+id/nav_referral"
        android:title="@string/id_card_bottom"
        android:icon="@drawable/ic_idcard"
        app:showAsAction="ifRoom"
        android:enabled="true"

        />

</menu>