<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_on_site_activity"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="16dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="0.5dp"
                        android:layout_weight="2"
                        android:background="@color/colorPrimaryDark"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/service_osite"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="0.5dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/yes"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/no"
                        android:textColor="@color/white" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/add_activity_adapter" />

            </LinearLayout>



                <LinearLayout
                    android:id="@+id/lnrButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_gravity="center"
                    android:weightSum="2"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:layout_gravity="center"
                        android:background="@drawable/edit_box_border_green"
                        android:gravity="center"
                        android:text="@string/cancel_onsite"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary" />


                    <Button
                        android:id="@+id/btnDone"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:layout_marginRight="25sp"
                        android:text="@string/done_onsite"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />


                </LinearLayout>



            </LinearLayout>



</layout>