<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="handler"
            type="com.ab.hicarerun.handler.UserOtpLoginClickHandler" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.OTP_LoginFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ss.com.bannerslider.Slider
                android:layout_above="@id/lnr_enter"
                android:id="@+id/banner_slider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:slider_interval="3000"
                android:layout_marginBottom="10dp"
                app:slider_loopSlides="true"
                app:slider_animateIndicators="true"
                app:slider_selectedSlideIndicator="@drawable/selected_slide_indicator"
                app:slider_unselectedSlideIndicator="@drawable/selected_slide_indicator"
                app:slider_emptyView="@layout/layout_empty_view"/>

            <LinearLayout
                android:id="@+id/lnr_enter"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="bottom"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txt_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_sign_up"
                    android:textColor="@color/grey" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnMobile"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:background="@drawable/shape_rounded_corner_btn_green"
                    android:onClick="@{(view) -> handler.onEnterMobileClicked(view)}"
                    android:text="@string/mobile_number"
                    android:textSize="18sp" />

            </LinearLayout>


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clipToPadding="true"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14sp"
                    android:text="@string/enter_your_phone_number_to_proceed" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_10_digit_mobile_number"
                    android:textColor="@android:color/black"
                    android:digits="0123456789"
                    android:maxLength="10"
                    android:inputType="number"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnOtp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:background="@drawable/shape_rounded_corner_btn_green"
                        android:text="@string/enter_phone_number"
                        android:enabled="false"
                        android:onClick="@{(view) -> handler.onSendOtpClicked(view)}"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>